contrast fix

--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -53,11 +53,15 @@ main{
     background-color: #d7dedc;
     padding: 1.5em;
 }
+
 footer{
     background-color: #3d2b3d;
     text-align: center; 
     color:#d7dedc;
     padding: 1em;
+}
+footer a{
+    color:#d7dedc;
 }
 table, th, td{
     border: 2px solid #3d2b3d;
